# bls_data_catalog

./: .gitignore  CLAUDE.md  docker-compose.yaml  pants.toml
.claude/commands/: speckit.implement.md  speckit.taskstoissues.md
.devcontainer/: devcontainer.json
.ona/: automations.yaml
bls_data_catalog/: BUILD  README.md  USAGE_GUIDE.md  __init__.py  dbt_project.yml  profiles.yml  pyproject.toml  requirements.txt  setup.sh
bls_data_catalog/data/: states.csv  us_employment.csv
bls_data_catalog/models/: exposures.yml  seeds.yml  semantic_models.yml  sources.yml
bls_data_catalog/models/semantic_models/: regional_employment_report.yml  state_employment_report.yml  us_employment.yml
bls_data_catalog/models/staging/bls/: stg_us_employment.sql
bls_data_catalog/models/views/: _metricflow_time_spine.yml  employment_cleaned.sql  metricflow_time_spine.sql  state_employment_combined.sql  stg_us_employment.sql  unemployment_cleaned.sql  v_employment.sql  v_state_employment.sql  v_unemployment.sql
bls_data_catalog/scripts/: __init__.py  build_metadata_catalog.py  data_delivery_server.py  load_sample_data.py
bls_data_catalog/tests/: BUILD  __init__.py  test_load_sample_data.py
semantic_manifest_editor/: BUILD  README.md
semantic_manifest_editor/backend/: BUILD  config.py  requirements.txt
semantic_manifest_editor/backend/api/: main.py  models.py
semantic_manifest_editor/frontend/: BUILD  index.html  package.json
specs/001-semantic-manifest-editor/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
(+12 files in other folders)
